criar uma tag p

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <h1 style="color: darkred; text-align: center;">meu primeiro site</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae dolores quis porro exercitationem quas placeat quos earum alias provident. Voluptatum labore nostrum voluptatem quas rerum repellendus, velit voluptatibus quidem totam.</p>
 </body>
 </html>
